# lp-meteo

./: .gitignore  .gitmodules  CMakeLists.txt  FreeRTOSConfig.h  FreeRTOSHooks.c  LICENSE  Makefile  README.md  assert.c  config.mk  dot_matrix_font.cpp  fault_handlers.c  main.cpp  makefile  pinout.ioc
.github/workflows/: build.yml
cmake/: config-nrf52.cmake  config-stm32f0.cmake  config-stm32f1.cmake  config-stm32f4.cmake  config-x86.cmake  toolchain-arm-gcc-cortex.cmake
cmake/debug-probes/: esptool.cmake  jlink.cmake  openocd.cmake  st-link.cmake
drivers/: CMakeLists.txt
drivers/examples/: dataflash.example.cpp  dht.example.cpp  di.example.cpp  ds18b20.example.cpp  enc.example.cpp  hd44780.example.cpp  onewire.example.cpp  sd.example.cpp  singlewire.example.cpp
drivers/examples/nrf24l01/: receiver.cpp  receiver_ack_payload.cpp  transmitter.cpp  transmitter_ack_payload.cpp
drivers/include/drivers/: dataflash.hpp  dht.hpp  di.hpp  dot_matrix.hpp  ds18b20.hpp  enc.hpp  hd44780.hpp  nmea_reader.hpp  nrf24l01.hpp  onewire.hpp  sd.hpp  sd_cid_csd_reg.hpp  sd_spi.hpp  singlewire.hpp
drivers/src/: dataflash.cpp  dht.cpp  di.cpp  dot_matrix.cpp  ds18b20.cpp  enc.cpp  hd44780.cpp  nmea_reader.cpp  nrf24l01.cpp  nrf24l01_priv.hpp  onewire.cpp  sd.cpp  sd_spi.cpp  singlewire.cpp
periph/: CMakeLists.txt
periph/examples/: dac.example.cpp  exti.example.cpp  gpio.example.cpp  i2c.example.cpp  pwm.example.cpp  rtc.example.cpp  spi.example.cpp  tim.example.cpp  uart.example.cpp  wdt.example.cpp
periph/include/periph/: dac.hpp  dma.hpp  exti.hpp  gpio.hpp  i2c.hpp  pwm.hpp  rcc.hpp  rtc.hpp  spi.hpp  systick.hpp  tim.hpp  uart.hpp  wdt.hpp
periph/src/: dac.cpp  dma.cpp  dma_priv.hpp  exti.cpp  gpio.cpp  gpio_priv.hpp  i2c.cpp  i2c_priv.hpp  pwm.cpp  pwm_priv.hpp  rcc.cpp  rtc.cpp  spi.cpp  spi_priv.hpp  systick.cpp  tim.cpp  tim_priv.hpp  uart.cpp  uart_priv.hpp  wdt.cpp
src/: dot_matrix_font.cpp  main.cpp  makefile
src/drv/: CMakeLists.txt  makefile
src/drv/dot_matrix/: dot_matrix.cpp  dot_matrix.hpp
src/drv/gps/: nmea.cpp
src/drv/hd44780/: hd44780.cpp  hd44780.hpp
src/hal/STM32F4/: CMakeLists.txt  STM32F407VGTx_FLASH.ld
src/hal/STM32F4/CMSIS/: CMakeLists.txt
src/hal/STM32F4/CMSIS/DSP/: CMakeLists.txt
src/hal/STM32F4/i2c/: i2c.cpp
src/hal/STM32F4/rtc/: rtc.cpp  rtc.hpp
src/task/: CMakeLists.txt  dht11.cpp  dht11.hpp  ds18b20.cpp  ds18b20.hpp  gps.cpp  gps.hpp  makefile  ui.cpp  ui.hpp
src/ul/fatfs_diskio/: CMakeLists.txt
src/ul/syslog/: CMakeLists.txt  syslog.cpp  syslog.example.cpp  syslog.hpp
tasks/: CMakeLists.txt
tasks/include/tasks/: dht11.hpp  ds18b20.hpp  gps.hpp  ui.hpp
tasks/src/: dht11.cpp  ds18b20.cpp  gps.cpp  ui.cpp
utilities/fatfs_diskio/: CMakeLists.txt  fatfs_diskio.cpp  fatfs_diskio.example.cpp  fatfs_diskio.hpp  fatfs_diskio_dataflash.cpp  fatfs_diskio_dataflash.hpp  fatfs_diskio_sd.cpp  fatfs_diskio_sd.hpp
utilities/freertos_wrappers/: CMakeLists.txt  freertos_wrappers.hpp
utilities/syslog/: CMakeLists.txt  syslog.cpp  syslog.example.cpp  syslog.hpp
